Style all modals

--- a/lenses/templates/lenses/lens_delete.html
+++ b/lenses/templates/lenses/lens_delete.html
@@ -22,5 +22,5 @@ Delete lenses?
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-sm btn-danger">Delete</button>
+<button type="submit" class="jb-submit-button-1">Delete</button>
 {% endblock action_button %}
