--- a/lenses/templates/lenses/lens_give_revoke_access.html
+++ b/lenses/templates/lenses/lens_give_revoke_access.html
@@ -34,10 +34,10 @@ Give access to Users and Groups?
     {% for lens in lenses %}
     <tr>
       <td>
-	{{ lens }}
+        {{ lens }}
       </td>
       <td>
-	{{ lens.getUsersWithAccessNoOwner|join:"," }} - <em>{{ lens.getGroupsWithAccessNoOwner|join:"," }}</em>
+        {{ lens.getUsersWithAccessNoOwner|join:"," }} - <em>{{ lens.getGroupsWithAccessNoOwner|join:"," }}</em>
       </td>
     </tr>
     {% endfor %}
@@ -49,7 +49,7 @@ Give access to Users and Groups?
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-sm btn-danger">
+<button type="submit" class="btn btn-sm btn-danger jb-submit-button-1">
   {% if view.kwargs.mode == 'revoke' %}
   Revoke access
   {% else %}
@@ -63,19 +63,19 @@ Give access to Users and Groups?
 <script>
   users_autocomplete("id_users");
   groups_autocomplete("id_groups");
-  
+
   // The following is needed for select2 to work properly in a modal
   $('#id_users').select2({
-      width: '100%',
-      placeholder: 'Search for a user',
-      minimumInputLength: 1,
-      dropdownParent: $('#id-modal')
+    width: '100%',
+    placeholder: 'Search for a user',
+    minimumInputLength: 1,
+    dropdownParent: $('#id-modal')
   });
   $('#id_groups').select2({
-      width: '100%',
-      placeholder: 'Search for a group',
-      minimumInputLength: 1,
-      dropdownParent: $('#id-modal')
+    width: '100%',
+    placeholder: 'Search for a group',
+    minimumInputLength: 1,
+    dropdownParent: $('#id-modal')
   });
 </script>
 {% endblock extrascripts %}
