--- a/lenses/templates/lenses/lens_make_private.html
+++ b/lenses/templates/lenses/lens_make_private.html
@@ -22,5 +22,5 @@ Make lenses private?
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-sm btn-danger">Make private</button>
+<button type="submit" class="jb-submit-button-1">Make private</button>
 {% endblock action_button %}
