--- a/lenses/templates/lenses/lens_make_public.html
+++ b/lenses/templates/lenses/lens_make_public.html
@@ -24,5 +24,5 @@ Make lenses public?
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-sm btn-danger">Make public</button>
+<button type="submit" class="jb-submit-button-1">Make public</button>
 {% endblock action_button %}
