--- a/sled_collections/templates/sled_collections/collection_select_to_add_items.html
+++ b/sled_collections/templates/sled_collections/collection_select_to_add_items.html
@@ -22,5 +22,5 @@ Select one of your collections to add the items
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-sm btn-primary">Add to collection</button>
+<button type="submit" class="jb-submit-button-1">Add to collection</button>
 {% endblock action_button %}
