--- a/sled_groups/templates/sled_groups/group_delete.html
+++ b/sled_groups/templates/sled_groups/group_delete.html
@@ -14,5 +14,5 @@ Delete group
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-danger">Delete</button>
+<button type="submit" class="jb-submit-button-1">Delete</button>
 {% endblock action_button %}
