--- a/sled_groups/templates/sled_groups/group_leave.html
+++ b/sled_groups/templates/sled_groups/group_leave.html
@@ -20,5 +20,5 @@ Leave group
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-danger">Leave</button>
+<button type="submit" class="jb-submit-button-1">Leave</button>
 {% endblock action_button %}
