--- a/sled_instrument/templates/sled_instrument/instrument_create.html
+++ b/sled_instrument/templates/sled_instrument/instrument_create.html
@@ -25,5 +25,5 @@ Create new instrument?
 {% endblock content %}
 
 {% block action_button %}
-<button type="submit" class="btn btn-sm btn-primary">Create</button>
+<button type="submit" class="jb-submit-button-1">Create</button>
 {% endblock action_button %}
