--- a/sled_notifications/templates/sled_notifications/notifications_detail.html
+++ b/sled_notifications/templates/sled_notifications/notifications_detail.html
@@ -12,5 +12,5 @@
 </div>
 
 <div class="modal-footer">
-  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+  <button type="button" class="jb-submit-button-1" data-dismiss="modal">Close</button>
 </div>
