--- a/sled_queries/templates/sled_queries/query_save.html
+++ b/sled_queries/templates/sled_queries/query_save.html
@@ -26,7 +26,7 @@ Update query
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-sm btn-primary">
+<button type="submit" class="jb-submit-button-1">
   {% if request.resolver_match.url_name == 'query-save' %}
   Save
   {% else %}
