--- a/lenses/templates/lenses/lens_cede_ownership.html
+++ b/lenses/templates/lenses/lens_cede_ownership.html
@@ -29,20 +29,20 @@ Cede ownership?
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-sm btn-danger">Cede ownership</button>
+<button type="submit" class="jb-submit-button-1">Cede ownership</button>
 {% endblock action_button %}
 
 
 {% block extrascripts %}
 <script>
   users_autocomplete('id_heir');
-  
-    // The following is needed for select2 to work properly in a modal
+
+  // The following is needed for select2 to work properly in a modal
   $('#id_heir').select2({
-      width: '100%',
-      placeholder: 'Search for a user',
-      minimumInputLength: 1,
-      dropdownParent: $('#id-modal')
+    width: '100%',
+    placeholder: 'Search for a user',
+    minimumInputLength: 1,
+    dropdownParent: $('#id-modal')
   });
 </script>
 {% endblock extrascripts %}
