--- a/lenses/templates/lenses/lens_collage.html
+++ b/lenses/templates/lenses/lens_collage.html
@@ -2,14 +2,15 @@
 {% load static %}
 {% block content %}
 
-<div>
-{% for lens in lenses %}
-<div class="inline-block">
-<figure><figcaption>{{lens.name}}</figcaption>
-<img src="{{ lens.mugshot.url }}" class="img">
-</figure>
-</div>
-{% endfor %}
+<div class="jb-container">
+  {% for lens in lenses %}
+  <div class="inline-block">
+    <figure>
+      <figcaption class="jb-heading-2">{{lens.name}}</figcaption>
+      <img src="{{ lens.mugshot.url }}" class="img">
+    </figure>
+  </div>
+  {% endfor %}
 </div>
 
 {% endblock content %}
