--- a/lenses/templates/lenses/lens_make_collection.html
+++ b/lenses/templates/lenses/lens_make_collection.html
@@ -13,7 +13,7 @@ Make collection?
   </ul>
 </div>
 
-<div>
+<div class="jb-modal-field">
   {{ form.name }}
 </div>
 
@@ -30,5 +30,5 @@ Make collection?
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-sm btn-primary">Make collection</button>
+<button type="submit" class="jb-submit-button-1">Make collection</button>
 {% endblock action_button %}
