--- a/sled_groups/templates/sled_groups/group_add_remove_members.html
+++ b/sled_groups/templates/sled_groups/group_add_remove_members.html
@@ -6,7 +6,7 @@ Add new members to the group
 {% else %}
 Remove members from the group
 {% endif %}
- {{ sledgroup.name }}?
+{{ sledgroup.name }}?
 {% endblock title %}
 
 
@@ -26,7 +26,7 @@ Remove members from the group
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-sm btn-primary">
+<button type="submit" class="jb-submit-button-1">
   {% if view.kwargs.mode == 'add' %}
   Add users
   {% else %}
@@ -40,10 +40,10 @@ Remove members from the group
 <script>
   users_autocomplete('id_users');
   $('#id_users').select2({
-      width: '100%',
-      placeholder: 'Search for a user',
-      minimumInputLength: 1,
-      dropdownParent: $('#id-modal')
+    width: '100%',
+    placeholder: 'Search for a user',
+    minimumInputLength: 1,
+    dropdownParent: $('#id-modal')
   });
 </script>
 {% endblock extrascripts %}
