--- a/sled_groups/templates/sled_groups/group_ask_to_join.html
+++ b/sled_groups/templates/sled_groups/group_ask_to_join.html
@@ -24,5 +24,5 @@ Request to join group
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-danger">Send</button>
+<button type="submit" class="jb-submit-button-1">Send</button>
 {% endblock action_button %}
