--- a/sled_queries/templates/sled_queries/queries_list.html
+++ b/sled_queries/templates/sled_queries/queries_list.html
@@ -40,11 +40,11 @@
 	    Update
 	  </button>
 	  <button type="button" class="sled-modal btn btn-sm btn-primary" data-form-url="{% url 'sled_queries:query-link' query.pk %}">
-	    <img src="{% static 'icons/trash.svg' %}" alt="trash">
+	    <img src="{% static 'icons/people-fill.svg' %}" alt="trash">
 	    Share
 	  </button>
 	  <button type="button" class="sled-view-query btn btn-sm btn-primary" data-form-url="{{ query.get_GET_url }}">
-	    <img src="{% static 'icons/trash.svg' %}" alt="trash">
+	    <img src="{% static 'icons/eye-fill.svg' %}" alt="trash">
 	    View
 	  </button>
 	</td>
