Separated the modal and message container code into template files that are included.

--- a/sled_collections/templates/sled_collections/collection_detail.html
+++ b/sled_collections/templates/sled_collections/collection_detail.html
@@ -4,13 +4,8 @@
 {% load lenses_extras %}
 
 {% block content %}
+{% include "modal_container.html" %}
 
-<!-- Modal divs -->
-<div class="modal fade" id="id-modal" tabindex="-1" role="dialog">
-  <div class="modal-dialog">
-    <div class="modal-content"></div>
-  </div>
-</div>
 
 <div class="jb-container">
   <h1 class="jb-heading-1">{{ collection.name }}</h1>
