--- a/sled_collections/templates/sled_collections/collection_list.html
+++ b/sled_collections/templates/sled_collections/collection_list.html
@@ -2,13 +2,7 @@
 {% load static %}
 
 {% block content %}
-<!-- This modal is required to display messages when redirecting here, e.g. when deleting a collection -->
-<div class="modal fade" tabindex="-1" role="dialog" id="id-modal">
-  <div class="modal-dialog">
-    <div class="modal-content"></div>
-  </div>
-</div>
-
+{% include "modal_container.html" %}
 
 
 <h1>My collections</h1>
