--- a/sled_notifications/templates/sled_notifications/notifications_list.html
+++ b/sled_notifications/templates/sled_notifications/notifications_list.html
@@ -2,11 +2,8 @@
 {% load static %}
 
 {% block content %}
-<div class="modal fade" tabindex="-1" role="dialog" id="id-modal">
-  <div class="modal-dialog">
-    <div class="modal-content"></div>
-  </div>
-</div>
+{% include "modal_container.html" %}
+
 
 <div class="jb-container">
   <h1 class="jb-heading-1">Notifications</h1>
