--- a/templates/master_header.html
+++ b/templates/master_header.html
@@ -33,36 +33,9 @@
   {% endblock extrascripts %}
 </head>
 
+
 <body>
-
-  <!-- Message div -->
-  <div>
-    {% if messages %}
-    {% for message in messages %}
-    {% if message.tags %}
-    <div style="border-radius:0;" id="alert-message" class="alert alert-icon alert-{{ message.tags }} alert-dismissible fade show mb-0" role="alert">
-      {{ message }}
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    {% else %}
-    <div style="border-radius:0;">
-      {{ message }}
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    {% endif %}
-    {% endfor %}
-    {% endif %}
-  </div>
-  <script type="text/javascript">
-    $("#alert-message").fadeTo(2000, 500).slideUp(500, function() {
-      $("#alert-message").slideUp(500);
-    });
-  </script>
-
+  {% include "message_container.html" with messages=messages %}
 
 
   <!-- Top navigation bar -->
