--- a/lenses/templates/lenses/lens_query.html
+++ b/lenses/templates/lenses/lens_query.html
@@ -2,13 +2,8 @@
 {% load static %}
 
 {% block content %}
+{% include "modal_container.html" %}
 
-<!-- Modal divs -->
-<div class="modal fade" id="id-modal" tabindex="-1" role="dialog">
-  <div class="modal-dialog">
-    <div class="modal-content"></div>
-  </div>
-</div>
 
 <div class="jb-container">
   <h1 class="jb-heading-1">Query Lenses</h1>
