--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -2,12 +2,7 @@
 {% load static %}
 
 {% block content %}
-<!-- Modal div -->
-<div class="modal fade" id="id-modal" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content"></div>
-  </div>
-</div>
+{% include "modal_container.html" %}
 
 
 <div class="jb-container">
