--- a/lenses/templates/lenses/lens_detail.html
+++ b/lenses/templates/lenses/lens_detail.html
@@ -20,21 +20,7 @@
         </p>
         <div class="jb-activity">
           {% activity_stream 'target' lens %}
-          {% if stream %}
-          <table>
-            <tbody>
-              {% for action in stream %}
-              <tr>
-                <td>{{ action.timestamp|timesince }} ago</td>
-                <td>{{ action.actor }}</td>
-                <td>{{ action.verb }}</td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-          {% else %}
-          No activity to display
-          {% endif %}
+	  {% include "activity_container.html" with stream=stream %}
         </div>
       </div>
       <div class="jb-right-details">
