Added user visit card view.

--- a/templates/activity_container.html
+++ b/templates/activity_container.html
@@ -95,10 +95,11 @@
   $('.sled-action-row').each(function(index){
       var mycontent = $("#tooltip-"+String(index)).html();
       $(this).tooltipster({
+	  position: 'left',
 	  theme: 'tooltipster-shadow',
 	  interactive: true,
 	  contentAsHTML: true,
-	  content: mycontent
+	  content: mycontent,
       });
   });
 </script>
